--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,9 @@ header > button{
     font-size: 16px;
     border-radius: 10px;
 }
+
+
+/*  */
 /* footer */
 footer{
     background-color: #0d132117;
@@ -102,4 +105,20 @@ footer{
 }
 .social a{
     margin: 5px;
+}
+
+
+
+/* banner css */
+.hero{
+    background-image: url(../images/Hero-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+.hero p{
+    margin: 30px 0px;
 }
