--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,7 @@ a{
     font-size: 18px;
     font-weight: 600;
 }
+
 .text-center{
     text-align: center;
 }
@@ -76,8 +77,12 @@ a{
     margin: 90px 0px;
 }
 .sectionHeader{
-    margin: 80px auto;
+        margin: 100px auto 60px;
+    
 }
+
+
+
 
 /* header css */
 header{
@@ -93,22 +98,6 @@ header > button{
     border-radius: 10px;
 }
 
-
-/*  */
-/* footer */
-footer{
-    background-color: #0d132117;
-}
-.footerContent{
-    justify-content: space-between;
-    padding: 10px 0px;
-}
-.social a{
-    margin: 5px;
-}
-
-
-
 /* banner css */
 .hero{
     background-image: url(../images/Hero-bg.jpg);
@@ -121,4 +110,135 @@ footer{
 }
 .hero p{
     margin: 30px 0px;
+}
+
+
+
+/* why development */
+.developmentBox{
+    margin: 20px 0px ;
+    justify-content: space-around;
+}
+
+.whyDevelopment img{
+    width: 35%;
+}
+.developmentContent{
+    margin: 20px;
+    width: 50%;
+}
+.developmentContent h2{
+    color: #0d1321b8;
+}
+.developmentContent p{
+    margin: 30px 0px;
+}
+.developmentContent button{
+    border: 1px solid #0D1321;
+    font-weight: 400;
+    font-size: 16px;
+    font-family: var(--primary-font-family);
+    padding: 12px 24px;
+}
+
+
+
+/* videoBox */
+.videoBox{
+    border: 1px solid #0D1321;
+    padding: 50px;
+    border: 1px solid #0D1321;
+    padding: 50px;
+    height: 600px;
+    border-radius: 20px;
+    margin-bottom: 40px;
+}
+iframe{
+    border-radius: 20px;
+}
+
+
+/* atrget */
+.html{
+    background-color: #ff4c1e33;
+}
+.css{
+    background-color: #004ce845;
+}
+.js{
+    background-color: #ffdf004f;
+}
+.targetRow{
+    justify-content: space-evenly;
+}
+.targetRow div{
+    margin: 20px;
+    padding: 30px;
+    border-radius: 20px;
+}
+/* next target */
+.nextTargetItem {
+    border: 2px solid #0d13211c;
+    margin: 60px 0px;
+    padding: 40px;
+    border-radius: 30px;
+}
+.nextTargetItem img{
+    margin-right: 30px;
+}
+.nextTargetItem a{
+    font-weight: 600;
+}
+/* contact */
+.contactBox{
+    background-image: url(../images/contactBox.jpg);
+    background-position:center;
+    background-repeat: no-repeat;background-size: cover;
+    height: 350px;
+    border-radius: 20px;
+}
+.contactBox h3{
+    margin: 0px;
+}
+.contactBox p{
+    width: 60%;
+    margin: 20px auto;
+}
+.subscriptionForm{
+    margin-top: 10px;
+}
+input{
+    background: white;
+    padding: 15px 15px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    font-family: var(--primary-font-family);
+}
+input::placeholder{
+    color: #0d13217e;
+}
+input[type=text]{
+    width: 80%;
+}
+input[type=button]{
+    font-weight: 600;
+    padding: 15px 20px;
+}
+form{
+    width: 60%;
+    text-align: center;
+}
+.text-white{
+    color: white!important;
+}
+
+
+
+footer{
+    background-color: #0d132117;
+}
+.footerContent{
+    justify-content: space-between;
+    padding: 10px 0px;
 }
