--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ p{
 a{
     text-decoration: underline;
     color: var(--primary-color);
+    font-weight: 600;
 }
 .w-100{
     width: 100%;
@@ -89,7 +90,7 @@ header{
     align-items: center;
     justify-content: space-between;
 }
-header > button{
+header  button{
     background-color: transparent;
     padding: 12px 24px;
     border: 2px solid #0D1321;
@@ -109,7 +110,8 @@ header > button{
     min-height: 100vh;
 }
 .hero p{
-    margin: 30px 0px;
+    margin: 30px auto;
+    width: 80%;
 }
 
 
@@ -135,10 +137,11 @@ header > button{
 }
 .developmentContent button{
     border: 1px solid #0D1321;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 16px;
     font-family: var(--primary-font-family);
-    padding: 12px 24px;
+    padding: 15px 24px;
+    color: #0d132194;
 }
 
 
@@ -160,13 +163,13 @@ iframe{
 
 /* atrget */
 .html{
-    background-color: #ff4c1e33;
+    background-color: #ff4c1e2e;
 }
 .css{
-    background-color: #004ce845;
+    background-color: #004ce82b;
 }
 .js{
-    background-color: #ffdf004f;
+    background-color: #ffdf003d;
 }
 .targetRow{
     justify-content: space-evenly;
@@ -179,8 +182,8 @@ iframe{
 /* next target */
 .nextTargetItem {
     border: 2px solid #0d13211c;
-    margin: 60px 0px;
-    padding: 40px;
+    margin: 45px 0px;
+    padding: 35px;
     border-radius: 30px;
 }
 .nextTargetItem img{
